--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="wechat.jpg" width="500">
+<img src="wechat.jpg" width="500" align="middle">
 </body>
 </html>
