--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
 <body>
 <img src="wechat.jpg" width="500" align="middle">
+  <p> Please download WeChat and scan the QR code to contact me. </p>
 </body>
 </html>
