--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="wechat.jpg" width="500" align="middle" alt="wechat QR">
-  <p> Please download WeChat and scan the QR code to contact me. </p>
+<img style="align:middle" src="wechat.jpg" width="500" align="middle" alt="wechat QR">
+  <p style="align:middle" > Please download WeChat and scan the QR code to contact me. </p>
 </body>
 </html>
