--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      #image{
+        margin:0px auto;
+      }
+      #contact{
+        margin:0px auto;
+      }
+    </style>
+  </head>
+      
 <body>
-<img style="align:middle" src="wechat.jpg" width="500" align="middle" alt="wechat QR">
-  <p style="align:middle" > Please download WeChat and scan the QR code to contact me. </p>
+<img id="image" src="wechat.jpg" width="500" align="middle" alt="wechat QR">
+  <p id="contact"> Please download WeChat and scan the QR code to contact me. </p>
 </body>
 </html>
