--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <style>
+      #all{
+        margin:0px auto;
+      }
       #image{
         margin:0px auto;
       }
@@ -12,7 +15,9 @@
   </head>
       
 <body>
+<div id="all">
 <img id="image" src="wechat.jpg" width="500" align="middle" alt="wechat QR">
   <p id="contact"> Please download WeChat and scan the QR code to contact me. </p>
+</div>
 </body>
 </html>
