--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
       #all{
         margin:0px auto;
-        width: 600;
+        width: 600px;
       }
       #image{
         margin:0px auto;
