--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       }
       #image{
         margin:0px auto;
+        width: 500px;
       }
       #contact{
         margin:0px auto;
+        width: 300px;
       }
     </style>
   </head>
